# webrtc-player

./: .clang-format  README.md  meson.build
data/: com.github.jsol.webrtc_player.gschema.xml  meson.build
src/: adw_wrapper.c  adw_wrapper.h  main.c  main_filewriter.c  meson.build  messages.c  messages.h  sidebar.c  sidebar.h  webrtc_client.c  webrtc_client.h  webrtc_gui.c  webrtc_gui.h  webrtc_session.c  webrtc_session.h  webrtc_settings.c  webrtc_settings.h
test/: create-messages-test.c  meson.build  parse-messages-test.c
test/incoming/: auth.json  hello.json  ice_candidate.json  init_session.json  peer_connected.json  peer_disconnected.json  response.json  sdp_offer.json  stream_started.json  stream_stopped.json
test/send/: add_ice_candidate.json  hello.json  init_session.json  sdp_answer.json  stream_filter.json
